# mb_coin

./: .env  Dockerfile  README.md  docker-compose.yaml  makefile  pyproject.toml
config/: __init__.py
mocks/: mock_bd_auth.py
src/: main.py
src/adapters/api/: auth.py  dependencies.py
src/adapters/api/routes/: coin_routes.py
src/adapters/caches/: redis_cache.py
src/adapters/gateways/: __init__.py
src/adapters/gateways/coin_market_cap_gateway/: coin_market_cap_gateway.py  schemas.py
src/adapters/gateways/mb_gateway/: mb_gateway.py  schemas.py
src/domain/dtos/: coin_dto.py
src/domain/exceptions/: coin_price_exception.py
src/domain/usecases/: get_coin_price_usecase.py
src/ports/: cache.py  gateways.py
